fabric/testdata/out/ing_brexit-mgmt-test-ralmeida-get-api-classification-status-rl-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"inlineContentIfStatus(429,
      \"{\\\"title\\\": \\\"Rate limit exceeded\\\", \\\"detail\\\": \\\"See the retry-after
      header for how many seconds to wait before retrying.\\\", \\\"status\\\": 429}\",
      \"application/problem+json\") -\u003e oauthTokeninfoAnyKV(\"realm\", \"/services\",
      \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\") -\u003e oauthTokeninfoAllScope(\"uid\",
      \"brexit-mgmt.read\") -\u003e clusterClientRatelimit(\"brexit-mgmt-test-ralmeida_api-classification-status_GET\",
      10000, \"1m\", \"Authorization\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(3) \u0026\u0026
      Path(\"/api/classification-status\") \u0026\u0026 Method(\"GET\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"ae043f81-ecb4-4dd8-8a28-e08278e4eae8","deployment-id":"d-n8kgbacnbwvvrvjq1i4r3jwac","pipeline-id":"l-kham1wbmzaojugzy8cubi4fib"},"name":"brexit-mgmt-test-ralmeida-get-api-classification-status-rl-all","namespace":"default"},"spec":{"rules":[{"host":"brexit-mgmt-test-ralmeida.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"brexit-mgmt-test-ralmeida","servicePort":"http"},"pathType":"Impl [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: 'inlineContentIfStatus(429, "{\"title\": \"Rate limit
      exceeded\", \"detail\": \"See the retry-after header for how many seconds to
      wait before retrying.\", \"status\": 429}", "application/problem+json") -> oauthTokeninfoAnyKV("realm",
      "/services", "realm", "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid",
      "brexit-mgmt.read") -> clusterClientRatelimit("brexit-mgmt-test-ralmeida_api-classification-status_GET",
      10000, "1m", "Authorization") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")'
    zalando.org/skipper-predicate: Weight(3) && Path("/api/classification-status")
      && Method("GET") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2021-06-22T16:06:57Z"
  generation: 1
  labels:
    controller-uid: ae043f81-ecb4-4dd8-8a28-e08278e4eae8
    deployment-id: d-n8kgbacnbwvvrvjq1i4r3jwac
    pipeline-id: l-kham1wbmzaojugzy8cubi4fib
  name: brexit-mgmt-test-ralmeida-get-api-classification-status-rl-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: brexit-mgmt-test-ralmeida
    uid: ae043f81-ecb4-4dd8-8a28-e08278e4eae8
  resourceVersion: "1357488328"
  uid: cf857841-62e9-4764-8204-6d24d14cd14f
spec:
  rules:
  - host: brexit-mgmt-test-ralmeida.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: brexit-mgmt-test-ralmeida
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
